--- a/index.html
+++ b/index.html
@@ -2,17 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hw25</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" sizes="20x20" href="/icon/favicon.ico">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>hw_34</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" sizes="20x20" href="/icon/favicon.ico">
 </head>
 
- <body>
-   <h1>THE FAVICON</h1>
-<audio src=""></audio>
- </body>
+<body>
+  <div class="container">
+    <div class="block">
+      <span>
+        <h1>Register</h1>
+      </span>
+
+    </div>
+    <p>Create your account. It's free and only takes a minute.</p>
+    <form action="#">
+      <p id="par_top"><input id="first_left " placeholder="First Name" type="text" required>
+        <input id="first_right " placeholder="Last Name" type="text" required></p>
+     <p> <input id="center_top" placeholder="E-mail" type="email" required></p>
+     <p> <input id="center_midle" placeholder="Password" type="password" required></p>
+     <p><input id="center_bottom" placeholder="Confirm Password" type="password" required></p>
+<p id="bot"><input id="check" type="checkbox"> l accept the Terms of Use & Privacy Policy. </p><br/>
+
+    </form>
+    <a href="#"> <button>Register Now</button></a>
+
+  </div>
+
+  </div>
+</body>
 
 </html>
